--- a/Makefile.in
+++ b/Makefile.in
@@ -13,7 +13,7 @@ CC_DEFAULT := @CC@
 ifeq ($(origin CC), default)
 CC	 := $(CC_DEFAULT)
 else
-CC	 ?= $(CC_DEFAULT)
+CC	 = $(CC_DEFAULT)
 endif
 CFLAGS	 ?= @CFLAGS@ @LIBNL3_CLI_CFLAGS@
 CPPFLAGS ?= @CPPFLAGS@
