fix(Makefile.in): honor Autobuild flags

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,9 +15,9 @@ CC	 := $(CC_DEFAULT)
 else
 CC	 = $(CC_DEFAULT)
 endif
-CFLAGS	 ?= @CFLAGS@ @LIBNL3_CLI_CFLAGS@
-CPPFLAGS ?= @CPPFLAGS@
-LDFLAGS  ?= @LDFLAGS@
+CFLAGS	 = @CFLAGS@ @LIBNL3_CLI_CFLAGS@
+CPPFLAGS = @CPPFLAGS@
+LDFLAGS  = @LDFLAGS@
 DEFS	 ?= @DEFS@
 LDLIBS	 ?= @LIBS@ @LIBNL3_CLI_LIBS@
 
